--- a/aranto_infomed/resources/css/app.css
+++ b/aranto_infomed/resources/css/app.css
@@ -139,3 +139,15 @@
         @apply bg-background text-foreground;
     }
 }
+
+@media print {
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  div {
+    page-break-inside: avoid;
+  }
+}
+
